fix layout shift

--- a/src/assets/styles/monospace-web.css
+++ b/src/assets/styles/monospace-web.css
@@ -46,7 +46,7 @@
 
 html {
   display: flex;
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
   flex-direction: column;
